// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-textarea-beta #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-textarea-beta>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-textarea-beta>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea disabled="" id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-textarea-beta>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" required="" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (1) 1`] = `
<gux-form-field-textarea-beta>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (2) 1`] = `
<gux-form-field-textarea-beta label-position="above">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (3) 1`] = `
<gux-form-field-textarea-beta label-position="beside">
  <mock:shadow-root>
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (4) 1`] = `
<gux-form-field-textarea-beta label-position="screenreader">
  <mock:shadow-root>
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (1) 1`] = `
<gux-form-field-textarea-beta>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (2) 1`] = `
<gux-form-field-textarea-beta resize="auto">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-auto" data-replicated-value="undefined">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (3) 1`] = `
<gux-form-field-textarea-beta resize="manual">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-manual">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (4) 1`] = `
<gux-form-field-textarea-beta resize="none">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-none">
          <slot name="input"></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea-beta>
`;
